# ExcelFlow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  extraction_plan.xlsx  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  quality.yml
docs/: expression-guide.md  index.md  installation.md  troubleshooting.md
docs/development/: architecture.md  development.md  function-documentation-guide.md  release.md  testing.md
docs/getting-started/: core-concepts.md  installation.md  quickstart.md
docs/how-to/: choose-join-type.md  handle-missing-values.md  multi-task-plan.md  window-overrun.md
docs/reference/: cli.md  data-types.md  expressions.md  filter-operators.md  template-reference.md
docs/tutorials/: aggregation.md  derived-columns.md  filters.md  joins.md  single-sheet.md  template-tutorial.md
examples/: README.md  generate.py
examples/order_report/: generate.py  plan.xlsx  source.xlsx
examples/tutorial/: 01_single_sheet.xlsx  02_filters.xlsx  03_join.xlsx  04_derived_columns.xlsx  05_aggregation.xlsx  source.xlsx
src/excelflow/: __init__.py  cli.py  engine.py  expression.py  output.py  repository.py  schema.py  service.py  template.py  validator.py
tests/: test_aggregation.py  test_cli.py  test_components.py  test_expression.py  test_expression_functions.py  test_main.py
